tests/custom/STARIS_2022/operation-type-errors/hist-type-error/stderr.expected
Error:
    hist-type-error.essence:2:21:
  |
2 | such that b = (hist(false) = hist(false))
  |                     ^^^^^
Type error:
	Expected: matrix, list or mset
	Got: bool

hist-type-error.essence:2:35:
  |
2 | such that b = (hist(false) = hist(false))
  |                                   ^^^^^
Type error:
	Expected: matrix, list or mset
	Got: bool

